testsuite/tests/overloadedrecflds/should_fail/T23063_aux.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T23063_aux where

data S = MkS { foo :: Int }
